--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "ournet.data.websites",
-  "version": "0.2.2",
-  "description": "Ournet websites data",
+  "name": "top20websites",
+  "version": "0.3.0",
+  "description": "Top20 websites data",
   "main": "./lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 0"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Ournet/ournet.data.websites.git"
+    "url": "https://github.com/Ournet/top20websites.git"
   },
   "keywords": [
     "ournet",
@@ -20,7 +20,6 @@
   "dependencies": {
     "bluebird": "^3.3.0",
     "lodash": "^4.3.0",
-    "memory-cache": "^0.1.4",
     "mongoose": "^4.0.2",
     "ournet.utils": "^0.1.0",
     "statefulco": "^0.1.0"
